add images and conclusions

--- a/2018-04-08.md
+++ b/2018-04-08.md
@@ -1,9 +1,12 @@
+![paddles](https://user-images.githubusercontent.com/116838/38658646-a3a791ce-3deb-11e8-9483-d8160c779391.gif)
+
 # Sunday, April 8, 2018
 
-_with [Wanjun], [Amanda], [Chris] and [Shaun]_
+_with [Wanjun], [Amanda], [Ashlee], [Chris], [Shaun]_
 
 [wanjun]: https://twitter.com/wanjun
 [amanda]: https://twitter.com/pandafulmanda
+[ashlee]: https://twitter.com/AshleeLWilliams
 [chris]: https://twitter.com/oakmac1
 [shaun]: https://twitter.com/shaunlebron
 
@@ -38,7 +41,22 @@ from last session to test that things were working as expected. We also
 deleted some of the old programs directly using the postgres command line
 tool, to declutter our camera screen for the session.
 
-We also spent some time catching Chris up on what we learned last session.
+We spent some time catching Chris up on what we learned last session, and
+played a bit with the old programs:
+
+<img src="https://user-images.githubusercontent.com/116838/38657978-a710a858-3de8-11e8-8e80-a2e1b4b2b85c.jpg" height="300"> <img src="https://user-images.githubusercontent.com/116838/38657979-a7236696-3de8-11e8-95ae-21554d3ffb57.jpg" height="300">
+<img src="https://user-images.githubusercontent.com/116838/38657981-a73583f8-3de8-11e8-95bf-375125c69e2f.jpg" height="300">
+<img src="https://user-images.githubusercontent.com/116838/38657983-a74545fe-3de8-11e8-87d2-c21a8b212456.jpg" height="300">
+
+## Playing with corners
+
+When swapping the opposite corners, the image flips, as if turning on its face:
+
+![mirror](https://user-images.githubusercontent.com/116838/38658630-8d853b76-3deb-11e8-99a8-2796bd0e672e.gif)
+
+When only two corners are present, the other two corners are projected somehow:
+
+![two-corners](https://user-images.githubusercontent.com/116838/38658728-f0b37988-3deb-11e8-8de6-4143a895d79a.gif)
 
 ## Housekeeping
 
@@ -47,7 +65,7 @@ Some discussions on:
 * naming programs
 * version controlling programs
 
-## Brainstorming
+## Game Brainstorming
 
 We had fun brainstorming on what we could do. This is sort of a cleaned up
 narrative of how our ideas evolved:
@@ -69,10 +87,6 @@ narrative of how our ideas evolved:
 > be to keep the ball from flying out of bounds by making ad-hoc paddle placements
 > with the person adjacent to you.
 
-> **Miscellaneous Idea** Ooh, when taping two separated corners of the program to bamboo
-> wands, its other two corners are projected in a strange way that we might be
-> able to use for something.
-
 ## Coding: "Ball Escape", a cooperative pong
 
 There was a lot of initial paralysis about how to do this.
@@ -81,9 +95,9 @@ There was a lot of initial paralysis about how to do this.
 
 We determined the following:
 
-* one dummy clone program for each paddle handle
+* one dummy clone program for each paddle handle ([see code](programs/paddle.js))
   * it does nothing but set its data to `isPaddle:true`
-* a "Ball Escape" program will do the rest
+* a "Ball Escape" program will do the rest ([see code](programs/ballescape.js))
   * it will find all programs with `isPaddle:true`
   * draw paddles in between them
   * manage the bouncing ball
@@ -109,11 +123,14 @@ from a github search on "ball line collision". Not sure how to just import JS
 libraries to help us here, and we ran out of time before we could finish
 implementing this part.
 
+![paddles](https://user-images.githubusercontent.com/116838/38658646-a3a791ce-3deb-11e8-9483-d8160c779391.gif)
+
 ## Development Environment
 
 Some discussions on:
 
 * simulated environment for dev
+  * probably defeats the purpose of the physical setup?
 * annotation program for displaying information over each paper
   * e.g. as soon as you place a paper in front of the project, a temporary annotation could tell you what program it is (useful for when we cut the corners off papers when stretching them out)
 
@@ -124,3 +141,14 @@ Some discussions on:
   * red borders denote programs that have been modified after printing
   * other borders denote programs that are currently open in editors (each editor is assigned a random color)
 * We wanted to get away from the limitation of having control points attached to papers, since we felt silly having to create an entire dummy program for a single paddle.
+
+## Conclusions
+
+Another fun session that left us with ideas on making this better:
+
+* would be nice to be able to detect things outside papers, instead of using papers to track them.
+  Dynamicland seems to do this by tracking colored cubes as auxiliary points.
+* would be nice to pull in external libraries for doing hard stuff like collision. Looking forward to
+  getting this working to complete our simple "Ball Escape" concept
+* would be nice to draw images from the camera back onto the projected surface to give us more to play with
+  * work happening here: https://github.com/janpaul123/paperprograms/pull/38
